hphp/test/zend/good/ext/libxml/tests/bug42112.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('dom')) die('skip');
}
