hphp/test/zend/bad/ext/libxml/tests/libxml_disable_entity_loader.php.skipif
<?php if (!extension_loaded('libxml') || !extension_loaded('dom') || defined('PHP_WINDOWS_VERSION_MAJOR')) die('skip'); ?>